test/testdata/syntax_errors/continue_outside_loop.lox
// error: 'continue' can only be used inside a loop
// lint error: 'continue' can only be used inside a loop
continue;
